<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/main_navBar"
    android:paddingBottom="50dp"
    android:theme="@style/RecyclerView">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_navBar">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="96dp"
        android:layout_height="25dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/gilroy_bold"
        android:letterSpacing="0.08"
        android:text="@string/searchFragmentSearchTextView"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/item_ripple"
        android:onClick="searchClicked"
        android:id="@+id/view"
        android:layout_width="421dp"
        android:layout_height="132dp"
        android:layout_marginTop="0dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:src="@drawable/search_black_vector"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="60dp"
            android:fontFamily="@font/gilroy_bold"
            android:letterSpacing="0.08"
            android:text="@string/movies_or_tv_showsTextView"
            android:textColor="#A8A8A8"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/view" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="210dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gilroy_bold"
        android:letterSpacing="0.08"
        android:text="@string/popular_genresTextView"
        android:textColor="#DCDCDC"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <androidx.cardview.widget.CardView
            android:onClick="actionClicked"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="120dp"
            android:layout_marginEnd="5dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/item_ripple">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/action_genre"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/gradient_genres"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.2"
                android:text="@string/searchFragmentActionTextView"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:fontFamily="@font/gilroy_medium"
                android:layout_gravity="center"
                android:shadowRadius="30"
                android:shadowColor="#818181"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="animationClicked"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="120dp"
            android:layout_marginStart="5dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/item_ripple">

            <ImageView
                android:id="@+id/animation_imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/animation_genre"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/gradient_genres"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.15"
                android:text="@string/searchFragmentAnimationTextView"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:fontFamily="@font/gilroy_medium"
                android:layout_gravity="center"
                android:shadowRadius="30"
                android:shadowColor="#818181"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.cardview.widget.CardView
            android:onClick="horrorClicked"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/item_ripple">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/horror_genre" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/gradient_genres" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.2"
                android:layout_gravity="center"
                android:fontFamily="@font/gilroy_medium"
                android:shadowColor="#818181"
                android:shadowRadius="30"
                android:textSize="20sp"
                android:text="@string/searchFragmentHorrorTextView"
                android:textColor="#FFFFFF" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="comedyClicked"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/item_ripple">

            <ImageView
                android:id="@+id/moviePageStarsImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/comedy_genre" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/gradient_genres" />
            <TextView
                android:letterSpacing="0.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/gilroy_medium"
                android:shadowColor="#818181"
                android:shadowRadius="30"
                android:textSize="20sp"
                android:text="@string/searchFragmentComedyTextView"
                android:textColor="#FFFFFF" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:onClick="filterToolClicked"
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/gilroy_bold"
        android:letterSpacing="0.08"
        android:text="@string/the_filter_toolTextView"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/item_ripple"
        android:paddingEnd="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="30dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>